[package]
name = "ip_proofs"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = {git = "https://github.com/nirvantyagi/zexe/", package = "algebra", branch = "int-condselect" }
ff_fft = {git = "https://github.com/nirvantyagi/zexe/", package = "ff-fft", branch = "int-condselect" }
groth16 = {git = "https://github.com/nirvantyagi/zexe/", package = "groth16", branch = "int-condselect" }
bench_utils = { git = "https://github.com/nirvantyagi/zexe", package = "bench-utils", branch = "int-condselect" }
rand = { version = "0.7" }
digest = { version = "0.9" }
num-traits = { version = "0.2" }
itertools = { version = "0.9" }

inner_products = { path = "../inner_products" }
dh_commitments = { path = "../dh_commitments" }

[dev-dependencies]
algebra = {git = "https://github.com/nirvantyagi/zexe/", package = "algebra", features = [ "ed_on_bls12_381", "bls12_381" ], branch = "int-condselect" }
r1cs_core = {git = "https://github.com/nirvantyagi/zexe/", package = "r1cs-core", branch = "int-condselect" }
r1cs_std = {git = "https://github.com/nirvantyagi/zexe/", package = "r1cs-std", branch = "int-condselect" }
blake2 = { version = "0.9" }

[features]
print-trace = [ "bench_utils/print-trace" ]